<?xml version="1.0"?>
<package format="2">
  <name>second_project</name>
  <version>0.0.1</version>
  <description>ROS1 mapping and navigation project</description>
  <maintainer email="stefano.garzoni@mail.polimi.it">Stefano Garzoni</maintainer>
  <maintainer email="nicolo.spuri@mail.polimi.it">Nicolò Spuri</maintainer>
  <maintainer email="santiago.ceresa@mail.polimi.it">Santiago Ceresa</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>message_filters</depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>map_server</depend>
  <depend>stage_ros</depend>
  <depend>rviz</depend>

</package>
